# simple-argument-parser

./: .travis-build.sh  .travis.yml  .vimrc  CMakeLists.txt  README.md
examples/: example_01.c
src/: .sap.c.swp  .sap.h.swp  sap.c  sap.h
tests/: CMakeLists.txt  sap.test.cpp
